--- a/packages/web/public/locales/translation/ja.yaml
+++ b/packages/web/public/locales/translation/ja.yaml
@@ -358,8 +358,7 @@ landing:
       content: ダミーデータで散布図を描いてください。
     chat:
       content: >-
-        フィボナッチ数を返す Python の関数を書いてください。また、実装を解説してください。
-        引数が項で、処理は再帰で書くようにしてください。出力はマークダウンにしてください。
+        テキストを翻訳してください。併せて内容の要点と、より適切な言い回しがあれば教えてください。
     diagram:
       content: 会社の一般的な経費生産フローを色つきで図示してください。
     generate:
